Add ErrorModel
