# src/main/java/com/sperasoft/passportapi/exceptions/RestResponseEntityExceptionHandler.java
@@ -4,6 +4,7 @@ import com.devskiller.friendly_id.FriendlyId;
 import com.sperasoft.passportapi.exceptions.passportexceptions.*;
 import com.sperasoft.passportapi.exceptions.personexceptions.InvalidPersonDataException;
 import com.sperasoft.passportapi.exceptions.personexceptions.PersonNotFoundException;
+import com.sperasoft.passportapi.model.ErrorModel;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.env.Environment;
@@ -12,7 +13,9 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.Objects;
 
@@ -33,21 +36,19 @@ public class RestResponseEntityExceptionHandler {
             PersonNotFoundException.class,
             InvalidPersonDataException.class
     })
-    protected ResponseEntity<Object> handleConflict(
+    protected ResponseEntity<ErrorModel> handleConflict(
             RuntimeException ex) {
         HttpStatus status = ex.getClass().getAnnotation(ResponseStatus.class).value();
         String propName = "exception." + ex.getClass().getSimpleName();
         String message;
+        var errorId = FriendlyId.createFriendlyId();
         if (ex.getMessage() != null) {
             message = String.format(
-                    environment.getProperty(propName), ex.getMessage());
+                    environment.getProperty(propName),
+                    ex.getMessage());
         } else message = Objects.requireNonNull(
                 environment.getProperty(propName));
-        log.error(String.format("%s %s %s",
-                FriendlyId.createFriendlyId(),
-                status,
-                message
-        ));
-        return new ResponseEntity<>(message, new HttpHeaders(), status);
+        log.error(String.format("%s %s", errorId, message));
+        return new ResponseEntity<>(new ErrorModel(errorId, message, status), status);
     }
 }
